--- a/src/index.css
+++ b/src/index.css
@@ -15,29 +15,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex;
+  place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+html {
+  scroll-behavior: smooth;
 }
 
-button {
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -47,24 +47,81 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
+} */
+/* button:hover {
   border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
+} */
+/* button:focus,
+/* button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
+
+  /* a:hover {
     color: #747bff;
-  }
+  } */
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+/* auth */
+.auth-image {
+  flex: 1;
+  position: relative;
+  background: #eee;
+}
+
+
+.auth-form {
+  flex: 1.3;
+  padding: 60px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.auth-input {
+  width: 100%;
+  font-size: 15px;
+  padding: 10px 13px;
+  border-radius: 15px;
+  border: 1px solid rgb(231, 230, 230);
+  outline: none;
+  transition: 0.2s border-color;
+  margin-bottom: 5px;
+}
+
+.auth-input:focus {
+  border: 2px solid #0f9386;
+  /* #aa7e61 */
+}
+
+button:focus-visible {
+
+  outline: none;
+
+}
+
+.auth-error {
+  font-size: 12px;
+  color: red;
+  margin-top: 4px;
+}
+
+/* Eye button */
+.eye-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  color: #8c8c8c;
 }
