--- a/src/index.css
+++ b/src/index.css
@@ -154,3 +154,14 @@ button:focus-visible {
 .animate-line-reverse {
   animation: lineMoveReverse 4s linear infinite;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
